cmake_minimum_required(VERSION 3.19)
project(cpp_lesson_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp_lesson_1 basic_problem_1.cpp basic_problem_2.cpp basic_problem_3.cpp conditional_problem_1.cpp conditional_problem_2.cpp conditional_problem_3.cpp conditional_problem_4.cpp loop_problem_1.cpp loop_2.cpp loop_3.cpp arrays_1.cpp hard_1.cpp hard_2.cpp hard_3.cpp hard_4.cpp hard_5.cpp cf_1511A.cpp usaco_bronze_2.cpp)